--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <![endif]-->
 
     <script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="goal_service.js"></script>
 </body>
 
 </html>
